--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ p {
     max-width: 100%;
 }
 
-header {
+.head {
     max-width: 100%;
     background-image: url(../img/banner/banner-bg.jpg);
     background-position: center 100%;
@@ -33,7 +33,7 @@ header {
     padding-bottom: 202px;
 }
 
-header::after {
+.head::after {
     content: '';
     position: absolute;
     background-color: black;
@@ -160,13 +160,14 @@ header::after {
 
 .main-trend__conteiner {
     position: relative;
-    z-index: 666;
+    z-index: 1;
     border: 3px solid #8f8350;
     padding: 20px;
 }
 
 .main-trend__tegs {
     margin-bottom: 15px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .main-trend__tegs-list {
@@ -174,6 +175,25 @@ header::after {
     color: #b59f5b;
     padding: 0;
     margin: 0;
+}
+
+.tegs {
+    font-family: inherit;
+    color: #b59f5b;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-right: 16px;
+    list-style-type: none;
+}
+
+.tegs:last-child {
+    margin-right: 0;
+}
+
+.tegs-link {
+    text-decoration: none;
+    color: inherit;
 }
 
 .main-trend__title {
@@ -236,6 +256,8 @@ header::after {
     opacity: 0.5;
 }
 
+
+
 .main-top {
     display: flex;
     max-width: 1170px;
@@ -274,24 +296,7 @@ header::after {
     margin-bottom: 20px;
 }
 
-.tegs {
-    font-family: inherit;
-    color: #b59f5b;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-right: 16px;
-    list-style-type: none;
-}
 
-.tegs:last-child {
-    margin-right: 0;
-}
-
-.tegs-link {
-    text-decoration: none;
-    color: inherit;
-}
 
 .main-content-post-title {
     text-transform: uppercase;
@@ -345,12 +350,12 @@ main-sidebar-form .author {
 
 .main-sidebar-title::after {
     content: '';
-    position: absolute;
+    display: block;
+    margin: 0 auto;
     width: 65px;
     height: 3px;
     background-color: #e1d9bd;
     margin-top: 10px;
-    left: 39%;
 }
 
 .main-sidebar-title-text {
@@ -407,9 +412,10 @@ main-sidebar-form .author {
     margin-bottom: 60px;
 }
 
-.main-sidebar-search-form-label {
+.main-sidebar-search-form {
     display: flex;
 }
+
 
 .main-sidebar-search-input {
     border: none;
@@ -557,16 +563,18 @@ main-sidebar-form .author {
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 15px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.main-products__wrapper {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    font-family: 'Open Sans', sans-serif;
 }
 
 .main-products__block {
     width: calc(33.33% - 40px);
     margin-right: 60px;
-    position: relative;
 }
 
 .main-products__block:last-child {
@@ -579,21 +587,18 @@ main-sidebar-form .author {
 
 }
 
-.main-products__block::after {
-    content: '';
-    width: 100%;
-    height: 260px;
-    border: 3px solid #d3c59d;
-    position: absolute;
-    right: -7px;
-    bottom: -34px;
+.main-products__image {
+    margin-bottom: 25px;
+    max-width: 100%;
 
 }
 
-.main-products__image {
-    margin-bottom: 25px;
-    max-width: 300px;
-
+.main-products__border {
+    border: 3px solid #d3c59d;
+    margin-top: -55px;
+    padding-top: 55px;
+    /* min-height: 265px; */
+    position: relative;
 }
 
 .main-products__title {
