--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,7 @@ p {
 
 .header-title {
     text-align: center;
-    width: 685px;
-    margin-top: 100px;
+    width: 60%;
     margin: 100px auto 0
 }
 
@@ -143,11 +142,12 @@ p {
 
 .main-trend {
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 60px;
 }
 
 .main-trend__block {
-    width: calc(25% - 3px);
+    width: calc(25% - 3.8px);
     padding: 160px 20px 20px;
     /* min-height: 300px; */
     position: relative;
@@ -281,7 +281,7 @@ p {
 }
 
 .main-content-post-img {
-    max-width: 380px;
+    max-width: 100%;
     margin-right: 30px;
 }
 
@@ -414,14 +414,19 @@ main-sidebar-form .author {
 
 .main-sidebar-search-form {
     display: flex;
+    flex-wrap: wrap;
+}
+
+.main-sidebar-search-form-label {
+    width: 80%;
 }
 
 
 .main-sidebar-search-input {
     border: none;
     background-color: #f4f7f6;
-    width: 224px;
-    height: 46px;
+    width: 100%;
+    height: 100%;
     padding-left: 15px;
     padding-right: 15px;
     font-family: inherit;
@@ -444,9 +449,10 @@ main-sidebar-form .author {
     background-repeat: no-repeat;
     padding: 23px 23px;
     background-position: center;
-    background-size: 20px;
+    background-size: 30px;
     outline: none;
     border: none;
+    width: 20%;
 }
 
 .main-sidebar-form {
@@ -575,6 +581,8 @@ main-sidebar-form .author {
 .main-products__block {
     width: calc(33.33% - 40px);
     margin-right: 60px;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-products__block:last-child {
@@ -596,9 +604,11 @@ main-sidebar-form .author {
 .main-products__border {
     border: 3px solid #d3c59d;
     margin-top: -55px;
-    padding-top: 55px;
+    padding-top: 35px;
+    padding-bottom: 25px;
     /* min-height: 265px; */
     position: relative;
+    flex-grow: 1;
 }
 
 .main-products__title {
@@ -759,4 +769,81 @@ footer {
     font-weight: 700;
     font-size: 12px;
     color: #999999;
+}
+
+
+@media (min-width: 768px) and (max-width: 1200px),
+(orientation: landscape) {
+    nav {
+        display: none;
+    }
+
+    .header-title-text {
+        font-size: 2.5rem;
+        line-height: 55px;
+    }
+
+    .main-trend__block {
+        width: calc(50% - 3px);
+        margin-bottom: 5px;
+    }
+
+    .main-trend__block:nth-child(2n) {
+        margin-right: 0;
+    }
+
+    .main-trend__title-text {
+        font-size: 1.0625rem;
+    }
+
+    .main-top {
+        max-width: 700px;
+    }
+
+    .main-content-post {
+        flex-direction: column;
+    }
+
+    .main-content {
+        width: calc(57% - 30px);
+        margin-right: 30px;
+    }
+
+    .main-content-post-img {
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+
+    .main-content-post-title {
+        font-size: 1.0625rem;
+    }
+
+    .main-sidebar {
+        width: 40.57%;
+    }
+
+    .main-products__wrapper {
+        justify-content: flex-start;
+    }
+
+    .main__title-text {
+        font-size: 1.125rem;
+    }
+
+    .main-products__block {
+        width: calc(50% - 25px);
+        margin-right: 25px;
+        margin-bottom: 25px;
+    }
+
+    .main-products__block:nth-child(2n) {
+        margin-right: 0;
+    }
+
+    .main-products__title-text {
+        font-size: 1.0625rem;
+    }
+
+
+
 }
