--- a/css/style.css
+++ b/css/style.css
@@ -772,8 +772,7 @@ footer {
 }
 
 
-@media (min-width: 768px) and (max-width: 1200px),
-(orientation: landscape) {
+@media (min-width: 768px) and (max-width: 1200px) and (orientation: landscape) {
     nav {
         display: none;
     }
