--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ a:hover {
     color: blue;
 }
 
+body {
+    min-width: 320px;
+}
+
 body,
 html,
 h1,
@@ -786,8 +790,119 @@ footer {
     display: none;
 }
 
+.feedback {
+    position: fixed;
+    width: 30%;
+    height: 30%;
+    left: 50%;
+    margin-left: -15%;
+    top: 50%;
+    margin-top: -15%;
+    z-index: 667;
+}
 
-@media (min-width: 768px) and (max-width: 1200px) {
+.feedback::before {
+    content: "";
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: black;
+    opacity: 0.4;
+
+}
+
+.content {
+    width: 100%;
+    background-color: #ffffff;
+    padding: 20px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.close {
+    width: 100%;
+}
+
+.close::after {
+
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: #ffffff;
+    transform: rotate(45deg);
+    top: -15px;
+    right: 0;
+}
+
+.close::before {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: #ffffff;
+    transform: rotate(-45deg);
+    top: -15px;
+    right: 0;
+
+}
+
+.feedback__title {
+    font-family: inherit;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.feedback__title::after {
+    content: '';
+    display: block;
+    margin: 0 auto;
+    width: 65px;
+    height: 3px;
+    background-color: #e1d9bd;
+    margin-top: 10px;
+}
+
+.feedback-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.feedback-form__input {
+    background-color: #f3f7f6;
+    padding: 10px;
+    border: none;
+    margin-bottom: 20px;
+}
+
+.feedback-form__radio {
+    margin-bottom: 20px;
+}
+
+.feedback-form__textarea {
+    background-color: #f3f7f6;
+    margin-bottom: 20px;
+    max-width: 100%;
+    max-height: 150px;
+}
+
+.feedback-form__button {
+    background-color: #b59f5b;
+    color: white;
+    border: none;
+    width: 100%;
+    height: 46px;
+    font-family: inherit;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+
+
+@media (min-width: 641px) and (max-width: 1200px) {
 
     .head {
         background-image: url(../img/banner/banner-bg-tablet.jpg);
@@ -964,10 +1079,25 @@ footer {
         margin-bottom: 10px;
     }
 
+    .feedback {
+        width: 400px;
+        height: 400px;
+        left: 50%;
+        margin-left: -200px;
+        top: 50%;
+        margin-top: -200px;
+        z-index: 667;
+    }
+
 
 }
 
-@media (max-width: 767px) {
+
+
+
+
+
+@media (max-width: 640px) {
     .head {
         background-image: url(../img/banner/banner-mobile.jpg);
         padding-bottom: 120px;
@@ -1153,5 +1283,15 @@ footer {
 
     .header-nav-item {
         margin-bottom: 10px;
+    }
+
+    .feedback {
+        max-width: 300px;
+        width: 80%;
+        left: 50%;
+        margin-left: -140px;
+        top: 50%;
+        margin-top: -250px;
+        z-index: 667;
     }
 }
